[package]
name = "may-clack"
version = "0.6.0"
authors = ["may"]
edition = "2021"
description = "stylish, interactive command line prompts"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/may-clack"
license = "MPL-2.0"
keywords = ["clack", "cli", "input", "prompt", "prompts"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
crossterm = "0.28.1"
is-unicode-supported = "0.1.0"
once_cell = "1.19.0"
owo-colors = "4.0.0"
rustyline = { version = "14.0.0", features = ["derive"] }
thiserror = "1.0.63"
unicode-truncate = "1.1.0"
