[package]
name = "may-clack"
version = "0.7.1"
authors = ["may"]
edition = "2024"
description = "stylish, interactive command line prompts"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/may-clack"
license = "MPL-2.0"
keywords = ["clack", "cli", "input", "prompt", "prompts"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
crossterm = "0.29.0"
is-unicode-supported = "0.1.0"
owo-colors = "4.3.0"
rustyline = { version = "17.0.2", features = ["derive"] }
thiserror = "2.0.18"
unicode-truncate = "2.0.1"
