[package]
name = "may-clack"
version = "0.7.1"
authors = ["may"]
edition = "2024"
description = "stylish, interactive command line prompts"
readme = "readme.md"
repository = "https://github.com/m4rch3n1ng/may-clack"
license = "MPL-2.0"
keywords = ["clack", "cli", "input", "prompt", "prompts"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
owo-colors = "4.3.0"
rustyline = { version = "17.0.2", default-features = false }
supports-unicode = "3.0.0"
unicode-truncate = "2.0.1"
